--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@mdi/font": "^5.8.55",
     "buefy": "^0.9.4",
     "core-js": "^3.6.5",
+    "lodash-es": "^4.17.15",
     "vue": "^2.6.11",
     "vue-bricks": "^2.0.0",
     "vuex": "^3.6.0"
