--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "buefy": "^0.9.4",
     "core-js": "^3.6.5",
     "lodash-es": "^4.17.15",
+    "luxon": "^1.25.0",
     "vue": "^2.6.11",
     "vue-bricks": "^2.0.0",
     "vuex": "^3.6.0"
